plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.laimory'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

jacoco {
	toolVersion = '0.8.15'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// WebClient(지오코딩 좌표 간 병렬 조회)용 — 서블릿 MVC 유지(web과 공존 시 WebApplicationType은 SERVLET).
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// AWS SDK v2: S3 presigned PUT 업로드 + 객체 삭제(사진 저장 인프라). S3Presigner도 s3 모듈에 포함.
	implementation platform('software.amazon.awssdk:bom:2.31.6')
	implementation 'software.amazon.awssdk:s3'
	// JSON 구조화 로그(ELK 수집용 stdout). Spring BOM 비관리 → 버전 명시. 8.x = logback 1.5.x 호환.
	implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
	// 자체 JWT(access token) HS256 서명/검증. Spring BOM 비관리 → 버전 명시.
	implementation 'com.nimbusds:nimbus-jose-jwt:10.3'
	// OAuth2 로그인(Google·Kakao OIDC) — 핸드셰이크(state/nonce/PKCE/code교환/id_token 검증) 위임
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// OAuth 핸드셰이크 세션을 Redis로 외부화(서버 이중화/LB 대비). 버전은 Spring BOM 관리.
	implementation 'org.springframework.session:spring-session-data-redis'
	// Swagger UI(OpenAPI 문서 자동 생성). 노출은 SWAGGER_ENABLED로 제어(기본 off — application.properties 참고). Spring BOM 비관리 → 버전 명시.
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	// Firebase Admin SDK — AI 타임라인 완료 FCM 푸시(FID target 발송; 9.10.0에서 fid 추가·token target deprecated).
	// Spring BOM 비관리 → 버전 명시. 새 코드에서 deprecated token API(setToken/addToken/addAllTokens) 금지.
	implementation 'com.google.firebase:firebase-admin:9.10.0'
	// Kakao 지오코딩 process-wide circuit breaker(코드 조립 전용). Spring BOM 비관리 → 버전 명시(세 모듈 동일 버전).
	// core type을 직접 import하므로 circuitbreaker가 compile classpath에 필요. Spring aspect/annotation starter와
	// Resilience4j Retry는 도입 금지(retry SSOT는 자체 RetryHelper+Reactor).
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.4.0'
	implementation 'io.github.resilience4j:resilience4j-reactor:2.4.0'
	implementation 'io.github.resilience4j:resilience4j-micrometer:2.4.0'
	// @WithSpan 선택 계측(서비스 경계 span — #277). OTel javaagent(배포 이미지 탑재, .env로 활성화)가
	// 없으면 애노테이션은 완전 no-op. 버전은 agent와 동일 라인 유지. Spring BOM 비관리 → 버전 명시.
	implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:2.30.0'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// Security 필터체인 슬라이스 테스트 지원(SecurityMockMvc 등). 버전은 Spring BOM 관리.
	testImplementation 'org.springframework.security:spring-security-test'
	// 비동기 조건 폴링 대기(geocoding 재시도, Tomcat valve 등 async 검증 공용). 버전은 Spring BOM 관리.
	testImplementation 'org.awaitility:awaitility'
	// 아키텍처 가드: Redis 직접 접근 금지(RedisGateway 강제) 등 규칙을 테스트로 검증. Spring BOM 비관리 → 버전 명시.
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	// Reactor 테스트 유틸(PublisherProbe — 병렬 조회 취소 검증). 버전은 Spring BOM(reactor-bom) 관리.
	testImplementation 'io.projectreactor:reactor-test'
	// WebClient 계약 테스트용 실 HTTP 루프백 서버(MockRestServiceServer는 RestClient 전용). Spring BOM 비관리 → 버전 명시.
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

// 멀티스테이지 Docker 빌드에서 실행 가능한 bootJar 하나만 산출되도록 plain jar 비활성화
tasks.named('jar') { enabled = false }

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'integration'
	}
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
}

// 통합 테스트(실 MySQL/Redis 필요). 로컬: docker compose up -d 후 ./gradlew integrationTest
def integrationTest = tasks.register('integrationTest', Test) {
	description = 'Runs @Tag("integration") tests (requires local MySQL/Redis).'
	group = 'verification'
	useJUnitPlatform {
		includeTags 'integration'
	}
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	shouldRunAfter('test')
}

tasks.register('jacocoAllTestReport', JacocoReport) {
	description = 'Generates combined JaCoCo coverage for test and integrationTest.'
	group = 'verification'
	dependsOn tasks.named('test'), integrationTest
	executionData tasks.named('test').get(), integrationTest.get()
	sourceSets sourceSets.main
	reports {
		xml.required = true
		xml.outputLocation = layout.buildDirectory.file('reports/jacoco/allTests/jacocoAllTestReport.xml')
		html.required = true
		html.outputLocation = layout.buildDirectory.dir('reports/jacoco/allTests/html')
		csv.required = false
	}
}
